--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -268,7 +268,7 @@
     <div class="container">
         <div class="text-center">
             <div [innerHTML]="footerbar | safeHtml"
-                 runScripts
+                 ddwRunScripts
                  id="myAdSpace"></div>
         </div>
     </div>
