--- a/src/app/components/core/navbar/navbar.component.html
+++ b/src/app/components/core/navbar/navbar.component.html
@@ -323,7 +323,7 @@
                                         class="fab fa-instagram"></i></a>
                             </div>
                             <div class="col-4">
-                                <div [innerHTML]="googleSearch | safeHtml" runScripts>
+                                <div [innerHTML]="googleSearch | safeHtml" ddwRunScripts>
                                 </div>
                             </div>
                         </div>
