--- a/src/app/components/core/pages-navbar/pages-navbar.component.html
+++ b/src/app/components/core/pages-navbar/pages-navbar.component.html
@@ -271,7 +271,7 @@
                                         class="fab fa-instagram"></i></a>
                             </div>
                             <div class="col-4">
-                                <div [innerHTML]="googleSearch | safeHtml" runScripts>
+                                <div [innerHTML]="googleSearch | safeHtml" ddwRunScripts>
                                 </div>
                             </div>
                         </div>
@@ -279,7 +279,7 @@
                         <!--<div class="inline pull-right d-sm-none d-md-block d-none d-sm-block">-->
                             <!--<form class="form-inline my-2 my-lg-0">-->
                                 <!--<div class="input-group mb-3">-->
-                                    <!--<div [innerHTML]="googleSearch | safeHtml" runScripts></div>-->
+                                    <!--<div [innerHTML]="googleSearch | safeHtml" ddwRunScripts></div>-->
                                     <!--&lt;!&ndash;<input type="text"&ndash;&gt;-->
                                            <!--&lt;!&ndash;class="form-control"&ndash;&gt;-->
                                            <!--&lt;!&ndash;placeholder="Search"&ndash;&gt;-->
