--- a/src/app/components/core/privacy-policy/privacy-policy.component.html
+++ b/src/app/components/core/privacy-policy/privacy-policy.component.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="text-center">
             <div [innerHTML]="headerbar | safeHtml"
-                 runScripts
+                 ddwRunScripts
                  id="AdSpace"></div>
         </div>
     </div>
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="text-center">
             <div [innerHTML]="footerbar | safeHtml"
-                 runScripts
+                 ddwRunScripts
                  id="myAdSpace"></div>
         </div>
     </div>
