--- a/src/app/components/pages/news-and-media/news-and-media.component.html
+++ b/src/app/components/pages/news-and-media/news-and-media.component.html
@@ -12,7 +12,7 @@
     <div class="row" *ngIf="headerbar">
         <div class="container">
             <div class="text-center">
-                <div [innerHTML]="headerbar | safeHtml" runScripts id="AdSpace"></div>
+                <div [innerHTML]="headerbar | safeHtml" ddwRunScripts id="AdSpace"></div>
             </div>
         </div>
     </div>
@@ -49,7 +49,7 @@
                      class="photoURL">
                 <div [innerHTML]="widgetSnippet | safeHtml"
                      *ngIf="widgetSnippet && page.showWidgetSnippet"
-                     runScripts
+                     ddwRunScripts
                      class="widgetSnippet"
                      id="widgetSnippet">
                 </div>
@@ -233,7 +233,7 @@
     <div class="row" *ngIf="footerbar">
         <div class="container">
             <div class="text-center">
-                <div [innerHTML]="footerbar | safeHtml" runScripts id="myAdSpace"></div>
+                <div [innerHTML]="footerbar | safeHtml" ddwRunScripts id="myAdSpace"></div>
             </div>
         </div>
     </div>
@@ -250,7 +250,7 @@
     <div class="row" *ngIf="headerbar">
         <div class="container">
             <div class="text-center">
-                <div [innerHTML]="headerbar | safeHtml" runScripts id="prAdSpace"></div>
+                <div [innerHTML]="headerbar | safeHtml" ddwRunScripts id="prAdSpace"></div>
             </div>
         </div>
     </div>
@@ -280,7 +280,7 @@
     <div class="row" *ngIf="footerbar">
         <div class="container">
             <div class="text-center">
-                <div [innerHTML]="footerbar | safeHtml" runScripts id="prmyAdSpace"></div>
+                <div [innerHTML]="footerbar | safeHtml" ddwRunScripts id="prmyAdSpace"></div>
             </div>
         </div>
     </div>
