--- a/src/app/components/pages/press-releases/press-releases-details/press-releases-details.component.html
+++ b/src/app/components/pages/press-releases/press-releases-details/press-releases-details.component.html
@@ -13,7 +13,7 @@
     <div class="row" *ngIf="headerbar">
         <div class="container">
             <div class="text-center">
-                <div [innerHTML]="headerbar | safeHtml" runScripts id="AdSpace"></div>
+                <div [innerHTML]="headerbar | safeHtml" ddwRunScripts id="AdSpace"></div>
             </div>
         </div>
     </div>
@@ -48,7 +48,7 @@
             <div class="row" *ngIf="footerbar">
                 <div class="container">
                     <div class="text-center">
-                        <div [innerHTML]="footerbar | safeHtml" runScripts id="myAdSpace"></div>
+                        <div [innerHTML]="footerbar | safeHtml" ddwRunScripts id="myAdSpace"></div>
                     </div>
                 </div>
             </div>
