--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="text-center">
                 <div [innerHTML]="headerbar | safeHtml"
-                     runScripts
+                     ddwRunScripts
                      id="AdSpace"></div>
             </div>
         </div>
@@ -51,7 +51,7 @@
                      class="photoURL">
                 <div [innerHTML]="widgetSnippet | safeHtml"
                      *ngIf="widgetSnippet && page.showWidgetSnippet"
-                     runScripts
+                     ddwRunScripts
                      class="widgetSnippet"
                      id="widgetSnippet">
                 </div>
@@ -236,7 +236,7 @@
         <div class="container">
             <div class="text-center">
                 <div [innerHTML]="footerbar | safeHtml"
-                     runScripts
+                     ddwRunScripts
                      id="myAdSpace"></div>
             </div>
         </div>
