Edit Text Section and CTA's are now linked from page Edit

--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.css
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.css
@@ -133,3 +133,10 @@ pre.alert.slug,
     border-radius: 0;
 }
 
+.text-section-preview {
+    float: right;
+}
+
+.cta-preview {
+    float: right;
+}
